# chatbot_on_AIPC

./: AGENTS.md  DESIGN.md  Readme.md  config.json  pyproject.toml  requirements.txt
docs/: libraries.md  requirements_definition.md  setup.md  technical_specification.md
