[project]
name = "chatbot-on-aipc"
version = "0.1.0"
description = "Local chatbot for Intel AI PC using OpenVINO and a browser UI."
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "openvino>=2026.2.0",
    "openvino-genai>=2026.2.0.0",
    "transformers>=4.40.0,<5.0.0",
    "optimum-intel>=1.18.0,<2.0.0",
    "huggingface_hub>=0.28.0,<1.0.0",
]
