[project]
name = "chatbot-on-aipc"
version = "0.1.0"
description = "Local chatbot for Intel AI PC using OpenVINO and a browser UI."
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "openvino>=2026.1.0",
    "optimum-intel @ git+https://github.com/rkazants/optimum-intel.git@support_gemma_4",
    "transformers==5.5.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=10.0.0",
    "huggingface_hub>=1.5.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
]

[tool.uv]
override-dependencies = [
    "transformers==5.5.0",
]
